--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-md-5 text-end  hero">
 
-        <div class="nams  ">
+        <div class="nams pb-3">
           <h6 class="pb-3 pt-4" [ngClass]="{'fade-slide': selectedItemIndex !== null && isImageChanged }"> {{location}}
             <i class="fa-solid fa-location-dot"></i>
           </h6>
